Jezyki Formalne/L4/parser.output
Terminals unused in grammar

    "end of line"


Rules useless in parser due to conflicts

   16 $@6: ε


State 52 conflicts: 1 reduce/reduce


Grammar

    0 $accept: program_all $end

    1 $@1: ε

    2 program_all: $@1 procedures main

    3 procedures: procedures PROCEDURE proc_head IS declarations IN commands END
    4           | procedures PROCEDURE proc_head IS IN commands END
    5           | ε

    6 $@2: ε

    7 main: PROGRAM IS $@2 declarations IN commands END

    8 $@3: ε

    9 main: PROGRAM IS $@3 IN commands END

   10 commands: commands command
   11         | command

   12 command: identifier ":=" expression ";"

   13 $@4: ε

   14 $@5: ε

   15 command: IF condition $@4 THEN commands ELSE $@5 commands ENDIF

   16 $@6: ε

   17 command: IF condition $@6 THEN commands ENDIF

   18 $@7: ε

   19 $@8: ε

   20 command: WHILE $@7 condition DO $@8 commands ENDWHILE

   21 $@9: ε

   22 command: REPEAT $@9 commands UNTIL condition ";"

   23 @10: ε

   24 $@11: ε

   25 command: FOR PIDENTIFIER FROM value TO value DO @10 commands $@11 ENDFOR

   26 @12: ε

   27 $@13: ε

   28 command: FOR PIDENTIFIER FROM value DOWNTO value DO @12 commands $@13 ENDFOR
   29        | proc_call ";"
   30        | READ identifier ";"
   31        | WRITE value ";"
   32        | error ";"

   33 $@14: ε

   34 proc_head: PIDENTIFIER "(" $@14 args_decl ")"

   35 $@15: ε

   36 proc_call: PIDENTIFIER $@15 "(" args ")"

   37 declarations: declarations "," PIDENTIFIER
   38             | declarations "," PIDENTIFIER "[" NUM ":" NUM "]"
   39             | PIDENTIFIER
   40             | PIDENTIFIER "[" NUM ":" NUM "]"

   41 args_decl: args_decl "," type PIDENTIFIER
   42          | type PIDENTIFIER

   43 type: typeT
   44     | typeI
   45     | typeO
   46     | ε

   47 args: args "," PIDENTIFIER
   48     | PIDENTIFIER

   49 expression: value
   50           | value "+" value
   51           | value "-" value
   52           | value "*" value
   53           | value "/" value
   54           | value "%" value

   55 condition: value "=" value
   56          | value "!=" value
   57          | value ">" value
   58          | value "<" value
   59          | value ">=" value
   60          | value "<=" value

   61 value: NUM
   62      | identifier

   63 identifier: PIDENTIFIER
   64           | PIDENTIFIER "[" PIDENTIFIER "]"
   65           | PIDENTIFIER "[" NUM "]"


Terminals, with rules where they appear

    $end (0) 0
    error (256) 32
    "end of line" (258)
    NUM <unsigned long> (259) 38 40 61 65
    PIDENTIFIER <std::string> (260) 25 28 34 36 37 38 39 40 41 42 47 48 63 64 65
    "+" (261) 50
    "-" (262) 51
    "*" (263) 52
    "/" (264) 53
    "%" (265) 54
    "=" (266) 55
    "!=" (267) 56
    ">" (268) 57
    "<" (269) 58
    ">=" (270) 59
    "<=" (271) 60
    "(" (272) 34 36
    ")" (273) 34 36
    "[" (274) 38 40 64 65
    "]" (275) 38 40 64 65
    "," (276) 37 38 41 47
    PROCEDURE (277) 3 4
    IS (278) 3 4 7 9
    IN (279) 3 4 7 9
    END (280) 3 4 7 9
    PROGRAM (281) 7 9
    ":=" (282) 12
    ";" (283) 12 22 29 30 31 32
    IF (284) 15 17
    THEN (285) 15 17
    ELSE (286) 15
    ENDIF (287) 15 17
    WHILE (288) 20
    DO (289) 20 25 28
    ENDWHILE (290) 20
    REPEAT (291) 22
    UNTIL (292) 22
    FOR (293) 25 28
    FROM (294) 25 28
    TO (295) 25
    ENDFOR (296) 25 28
    DOWNTO (297) 28
    READ (298) 30
    WRITE (299) 31
    ":" (300) 38 40
    typeT (301) 43
    typeI (302) 44
    typeO (303) 45


Nonterminals, with rules where they appear

    $accept (49)
        on left: 0
    program_all (50)
        on left: 2
        on right: 0
    $@1 (51)
        on left: 1
        on right: 2
    procedures (52)
        on left: 3 4 5
        on right: 2 3 4
    main (53)
        on left: 7 9
        on right: 2
    $@2 (54)
        on left: 6
        on right: 7
    $@3 (55)
        on left: 8
        on right: 9
    commands (56)
        on left: 10 11
        on right: 3 4 7 9 10 15 17 20 22 25 28
    command (57)
        on left: 12 15 17 20 22 25 28 29 30 31 32
        on right: 10 11
    $@4 (58)
        on left: 13
        on right: 15
    $@5 (59)
        on left: 14
        on right: 15
    $@6 (60)
        on left: 16
        on right: 17
    $@7 (61)
        on left: 18
        on right: 20
    $@8 (62)
        on left: 19
        on right: 20
    $@9 (63)
        on left: 21
        on right: 22
    @10 (64)
        on left: 23
        on right: 25
    $@11 (65)
        on left: 24
        on right: 25
    @12 (66)
        on left: 26
        on right: 28
    $@13 (67)
        on left: 27
        on right: 28
    proc_head (68)
        on left: 34
        on right: 3 4
    $@14 (69)
        on left: 33
        on right: 34
    proc_call (70)
        on left: 36
        on right: 29
    $@15 (71)
        on left: 35
        on right: 36
    declarations (72)
        on left: 37 38 39 40
        on right: 3 7 37 38
    args_decl (73)
        on left: 41 42
        on right: 34 41
    type <TYPE> (74)
        on left: 43 44 45 46
        on right: 41 42
    args (75)
        on left: 47 48
        on right: 36 47
    expression <unsigned long> (76)
        on left: 49 50 51 52 53 54
        on right: 12
    condition <bool> (77)
        on left: 55 56 57 58 59 60
        on right: 15 17 20 22
    value <val> (78)
        on left: 61 62
        on right: 25 28 31 49 50 51 52 53 54 55 56 57 58 59 60
    identifier <pid> (79)
        on left: 63 64 65
        on right: 12 30 62


State 0

    0 $accept: • program_all $end

    $default  reduce using rule 1 ($@1)

    program_all  go to state 1
    $@1          go to state 2


State 1

    0 $accept: program_all • $end

    $end  shift, and go to state 3


State 2

    2 program_all: $@1 • procedures main

    $default  reduce using rule 5 (procedures)

    procedures  go to state 4


State 3

    0 $accept: program_all $end •

    $default  accept


State 4

    2 program_all: $@1 procedures • main
    3 procedures: procedures • PROCEDURE proc_head IS declarations IN commands END
    4           | procedures • PROCEDURE proc_head IS IN commands END

    PROCEDURE  shift, and go to state 5
    PROGRAM    shift, and go to state 6

    main  go to state 7


State 5

    3 procedures: procedures PROCEDURE • proc_head IS declarations IN commands END
    4           | procedures PROCEDURE • proc_head IS IN commands END

    PIDENTIFIER  shift, and go to state 8

    proc_head  go to state 9


State 6

    7 main: PROGRAM • IS $@2 declarations IN commands END
    9     | PROGRAM • IS $@3 IN commands END

    IS  shift, and go to state 10


State 7

    2 program_all: $@1 procedures main •

    $default  reduce using rule 2 (program_all)


State 8

   34 proc_head: PIDENTIFIER • "(" $@14 args_decl ")"

    "("  shift, and go to state 11


State 9

    3 procedures: procedures PROCEDURE proc_head • IS declarations IN commands END
    4           | procedures PROCEDURE proc_head • IS IN commands END

    IS  shift, and go to state 12


State 10

    7 main: PROGRAM IS • $@2 declarations IN commands END
    9     | PROGRAM IS • $@3 IN commands END

    IN        reduce using rule 8 ($@3)
    $default  reduce using rule 6 ($@2)

    $@2  go to state 13
    $@3  go to state 14


State 11

   34 proc_head: PIDENTIFIER "(" • $@14 args_decl ")"

    $default  reduce using rule 33 ($@14)

    $@14  go to state 15


State 12

    3 procedures: procedures PROCEDURE proc_head IS • declarations IN commands END
    4           | procedures PROCEDURE proc_head IS • IN commands END

    PIDENTIFIER  shift, and go to state 16
    IN           shift, and go to state 17

    declarations  go to state 18


State 13

    7 main: PROGRAM IS $@2 • declarations IN commands END

    PIDENTIFIER  shift, and go to state 16

    declarations  go to state 19


State 14

    9 main: PROGRAM IS $@3 • IN commands END

    IN  shift, and go to state 20


State 15

   34 proc_head: PIDENTIFIER "(" $@14 • args_decl ")"

    typeT  shift, and go to state 21
    typeI  shift, and go to state 22
    typeO  shift, and go to state 23

    $default  reduce using rule 46 (type)

    args_decl  go to state 24
    type       go to state 25


State 16

   39 declarations: PIDENTIFIER •
   40             | PIDENTIFIER • "[" NUM ":" NUM "]"

    "["  shift, and go to state 26

    $default  reduce using rule 39 (declarations)


State 17

    4 procedures: procedures PROCEDURE proc_head IS IN • commands END

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    commands    go to state 35
    command     go to state 36
    proc_call   go to state 37
    identifier  go to state 38


State 18

    3 procedures: procedures PROCEDURE proc_head IS declarations • IN commands END
   37 declarations: declarations • "," PIDENTIFIER
   38             | declarations • "," PIDENTIFIER "[" NUM ":" NUM "]"

    ","  shift, and go to state 39
    IN   shift, and go to state 40


State 19

    7 main: PROGRAM IS $@2 declarations • IN commands END
   37 declarations: declarations • "," PIDENTIFIER
   38             | declarations • "," PIDENTIFIER "[" NUM ":" NUM "]"

    ","  shift, and go to state 39
    IN   shift, and go to state 41


State 20

    9 main: PROGRAM IS $@3 IN • commands END

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    commands    go to state 42
    command     go to state 36
    proc_call   go to state 37
    identifier  go to state 38


State 21

   43 type: typeT •

    $default  reduce using rule 43 (type)


State 22

   44 type: typeI •

    $default  reduce using rule 44 (type)


State 23

   45 type: typeO •

    $default  reduce using rule 45 (type)


State 24

   34 proc_head: PIDENTIFIER "(" $@14 args_decl • ")"
   41 args_decl: args_decl • "," type PIDENTIFIER

    ")"  shift, and go to state 43
    ","  shift, and go to state 44


State 25

   42 args_decl: type • PIDENTIFIER

    PIDENTIFIER  shift, and go to state 45


State 26

   40 declarations: PIDENTIFIER "[" • NUM ":" NUM "]"

    NUM  shift, and go to state 46


State 27

   32 command: error • ";"

    ";"  shift, and go to state 47


State 28

   36 proc_call: PIDENTIFIER • $@15 "(" args ")"
   63 identifier: PIDENTIFIER •
   64           | PIDENTIFIER • "[" PIDENTIFIER "]"
   65           | PIDENTIFIER • "[" NUM "]"

    "["  shift, and go to state 48

    ":="      reduce using rule 63 (identifier)
    $default  reduce using rule 35 ($@15)

    $@15  go to state 49


State 29

   15 command: IF • condition $@4 THEN commands ELSE $@5 commands ENDIF
   17        | IF • condition $@6 THEN commands ENDIF

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    condition   go to state 52
    value       go to state 53
    identifier  go to state 54


State 30

   20 command: WHILE • $@7 condition DO $@8 commands ENDWHILE

    $default  reduce using rule 18 ($@7)

    $@7  go to state 55


State 31

   22 command: REPEAT • $@9 commands UNTIL condition ";"

    $default  reduce using rule 21 ($@9)

    $@9  go to state 56


State 32

   25 command: FOR • PIDENTIFIER FROM value TO value DO @10 commands $@11 ENDFOR
   28        | FOR • PIDENTIFIER FROM value DOWNTO value DO @12 commands $@13 ENDFOR

    PIDENTIFIER  shift, and go to state 57


State 33

   30 command: READ • identifier ";"

    PIDENTIFIER  shift, and go to state 51

    identifier  go to state 58


State 34

   31 command: WRITE • value ";"

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 59
    identifier  go to state 54


State 35

    4 procedures: procedures PROCEDURE proc_head IS IN commands • END
   10 commands: commands • command

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    END          shift, and go to state 60
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    command     go to state 61
    proc_call   go to state 37
    identifier  go to state 38


State 36

   11 commands: command •

    $default  reduce using rule 11 (commands)


State 37

   29 command: proc_call • ";"

    ";"  shift, and go to state 62


State 38

   12 command: identifier • ":=" expression ";"

    ":="  shift, and go to state 63


State 39

   37 declarations: declarations "," • PIDENTIFIER
   38             | declarations "," • PIDENTIFIER "[" NUM ":" NUM "]"

    PIDENTIFIER  shift, and go to state 64


State 40

    3 procedures: procedures PROCEDURE proc_head IS declarations IN • commands END

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    commands    go to state 65
    command     go to state 36
    proc_call   go to state 37
    identifier  go to state 38


State 41

    7 main: PROGRAM IS $@2 declarations IN • commands END

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    commands    go to state 66
    command     go to state 36
    proc_call   go to state 37
    identifier  go to state 38


State 42

    9 main: PROGRAM IS $@3 IN commands • END
   10 commands: commands • command

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    END          shift, and go to state 67
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    command     go to state 61
    proc_call   go to state 37
    identifier  go to state 38


State 43

   34 proc_head: PIDENTIFIER "(" $@14 args_decl ")" •

    $default  reduce using rule 34 (proc_head)


State 44

   41 args_decl: args_decl "," • type PIDENTIFIER

    typeT  shift, and go to state 21
    typeI  shift, and go to state 22
    typeO  shift, and go to state 23

    $default  reduce using rule 46 (type)

    type  go to state 68


State 45

   42 args_decl: type PIDENTIFIER •

    $default  reduce using rule 42 (args_decl)


State 46

   40 declarations: PIDENTIFIER "[" NUM • ":" NUM "]"

    ":"  shift, and go to state 69


State 47

   32 command: error ";" •

    $default  reduce using rule 32 (command)


State 48

   64 identifier: PIDENTIFIER "[" • PIDENTIFIER "]"
   65           | PIDENTIFIER "[" • NUM "]"

    NUM          shift, and go to state 70
    PIDENTIFIER  shift, and go to state 71


State 49

   36 proc_call: PIDENTIFIER $@15 • "(" args ")"

    "("  shift, and go to state 72


State 50

   61 value: NUM •

    $default  reduce using rule 61 (value)


State 51

   63 identifier: PIDENTIFIER •
   64           | PIDENTIFIER • "[" PIDENTIFIER "]"
   65           | PIDENTIFIER • "[" NUM "]"

    "["  shift, and go to state 48

    $default  reduce using rule 63 (identifier)


State 52

   15 command: IF condition • $@4 THEN commands ELSE $@5 commands ENDIF
   17        | IF condition • $@6 THEN commands ENDIF

    THEN      reduce using rule 13 ($@4)
    THEN      [reduce using rule 16 ($@6)]
    $default  reduce using rule 13 ($@4)

    $@4  go to state 73
    $@6  go to state 74

    reduce/reduce conflict on token THEN:
       13 $@4: ε •
       16 $@6: ε •
      First example: $@1 procedures PROGRAM IS $@3 IN IF condition • THEN commands ELSE $@5 commands ENDIF END $end
      First reduce derivation
        $accept
        ↳ 0: program_all                                                                                                             $end
             ↳ 2: $@1 procedures main
                                 ↳ 9: PROGRAM IS $@3 IN commands                                                                 END
                                                        ↳ 11: command
                                                              ↳ 15: IF condition $@4       THEN commands ELSE $@5 commands ENDIF
                                                                                 ↳ 13: ε •
      Second example: $@1 procedures PROGRAM IS $@3 IN IF condition • THEN commands ENDIF END $end
      Second reduce derivation
        $accept
        ↳ 0: program_all                                                                                           $end
             ↳ 2: $@1 procedures main
                                 ↳ 9: PROGRAM IS $@3 IN commands                                               END
                                                        ↳ 11: command
                                                              ↳ 17: IF condition $@6       THEN commands ENDIF
                                                                                 ↳ 16: ε •



State 53

   55 condition: value • "=" value
   56          | value • "!=" value
   57          | value • ">" value
   58          | value • "<" value
   59          | value • ">=" value
   60          | value • "<=" value

    "="   shift, and go to state 75
    "!="  shift, and go to state 76
    ">"   shift, and go to state 77
    "<"   shift, and go to state 78
    ">="  shift, and go to state 79
    "<="  shift, and go to state 80


State 54

   62 value: identifier •

    $default  reduce using rule 62 (value)


State 55

   20 command: WHILE $@7 • condition DO $@8 commands ENDWHILE

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    condition   go to state 81
    value       go to state 53
    identifier  go to state 54


State 56

   22 command: REPEAT $@9 • commands UNTIL condition ";"

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    commands    go to state 82
    command     go to state 36
    proc_call   go to state 37
    identifier  go to state 38


State 57

   25 command: FOR PIDENTIFIER • FROM value TO value DO @10 commands $@11 ENDFOR
   28        | FOR PIDENTIFIER • FROM value DOWNTO value DO @12 commands $@13 ENDFOR

    FROM  shift, and go to state 83


State 58

   30 command: READ identifier • ";"

    ";"  shift, and go to state 84


State 59

   31 command: WRITE value • ";"

    ";"  shift, and go to state 85


State 60

    4 procedures: procedures PROCEDURE proc_head IS IN commands END •

    $default  reduce using rule 4 (procedures)


State 61

   10 commands: commands command •

    $default  reduce using rule 10 (commands)


State 62

   29 command: proc_call ";" •

    $default  reduce using rule 29 (command)


State 63

   12 command: identifier ":=" • expression ";"

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    expression  go to state 86
    value       go to state 87
    identifier  go to state 54


State 64

   37 declarations: declarations "," PIDENTIFIER •
   38             | declarations "," PIDENTIFIER • "[" NUM ":" NUM "]"

    "["  shift, and go to state 88

    $default  reduce using rule 37 (declarations)


State 65

    3 procedures: procedures PROCEDURE proc_head IS declarations IN commands • END
   10 commands: commands • command

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    END          shift, and go to state 89
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    command     go to state 61
    proc_call   go to state 37
    identifier  go to state 38


State 66

    7 main: PROGRAM IS $@2 declarations IN commands • END
   10 commands: commands • command

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    END          shift, and go to state 90
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    command     go to state 61
    proc_call   go to state 37
    identifier  go to state 38


State 67

    9 main: PROGRAM IS $@3 IN commands END •

    $default  reduce using rule 9 (main)


State 68

   41 args_decl: args_decl "," type • PIDENTIFIER

    PIDENTIFIER  shift, and go to state 91


State 69

   40 declarations: PIDENTIFIER "[" NUM ":" • NUM "]"

    NUM  shift, and go to state 92


State 70

   65 identifier: PIDENTIFIER "[" NUM • "]"

    "]"  shift, and go to state 93


State 71

   64 identifier: PIDENTIFIER "[" PIDENTIFIER • "]"

    "]"  shift, and go to state 94


State 72

   36 proc_call: PIDENTIFIER $@15 "(" • args ")"

    PIDENTIFIER  shift, and go to state 95

    args  go to state 96


State 73

   15 command: IF condition $@4 • THEN commands ELSE $@5 commands ENDIF

    THEN  shift, and go to state 97


State 74

   17 command: IF condition $@6 • THEN commands ENDIF

    THEN  shift, and go to state 98


State 75

   55 condition: value "=" • value

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 99
    identifier  go to state 54


State 76

   56 condition: value "!=" • value

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 100
    identifier  go to state 54


State 77

   57 condition: value ">" • value

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 101
    identifier  go to state 54


State 78

   58 condition: value "<" • value

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 102
    identifier  go to state 54


State 79

   59 condition: value ">=" • value

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 103
    identifier  go to state 54


State 80

   60 condition: value "<=" • value

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 104
    identifier  go to state 54


State 81

   20 command: WHILE $@7 condition • DO $@8 commands ENDWHILE

    DO  shift, and go to state 105


State 82

   10 commands: commands • command
   22 command: REPEAT $@9 commands • UNTIL condition ";"

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    UNTIL        shift, and go to state 106
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    command     go to state 61
    proc_call   go to state 37
    identifier  go to state 38


State 83

   25 command: FOR PIDENTIFIER FROM • value TO value DO @10 commands $@11 ENDFOR
   28        | FOR PIDENTIFIER FROM • value DOWNTO value DO @12 commands $@13 ENDFOR

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 107
    identifier  go to state 54


State 84

   30 command: READ identifier ";" •

    $default  reduce using rule 30 (command)


State 85

   31 command: WRITE value ";" •

    $default  reduce using rule 31 (command)


State 86

   12 command: identifier ":=" expression • ";"

    ";"  shift, and go to state 108


State 87

   49 expression: value •
   50           | value • "+" value
   51           | value • "-" value
   52           | value • "*" value
   53           | value • "/" value
   54           | value • "%" value

    "+"  shift, and go to state 109
    "-"  shift, and go to state 110
    "*"  shift, and go to state 111
    "/"  shift, and go to state 112
    "%"  shift, and go to state 113

    $default  reduce using rule 49 (expression)


State 88

   38 declarations: declarations "," PIDENTIFIER "[" • NUM ":" NUM "]"

    NUM  shift, and go to state 114


State 89

    3 procedures: procedures PROCEDURE proc_head IS declarations IN commands END •

    $default  reduce using rule 3 (procedures)


State 90

    7 main: PROGRAM IS $@2 declarations IN commands END •

    $default  reduce using rule 7 (main)


State 91

   41 args_decl: args_decl "," type PIDENTIFIER •

    $default  reduce using rule 41 (args_decl)


State 92

   40 declarations: PIDENTIFIER "[" NUM ":" NUM • "]"

    "]"  shift, and go to state 115


State 93

   65 identifier: PIDENTIFIER "[" NUM "]" •

    $default  reduce using rule 65 (identifier)


State 94

   64 identifier: PIDENTIFIER "[" PIDENTIFIER "]" •

    $default  reduce using rule 64 (identifier)


State 95

   48 args: PIDENTIFIER •

    $default  reduce using rule 48 (args)


State 96

   36 proc_call: PIDENTIFIER $@15 "(" args • ")"
   47 args: args • "," PIDENTIFIER

    ")"  shift, and go to state 116
    ","  shift, and go to state 117


State 97

   15 command: IF condition $@4 THEN • commands ELSE $@5 commands ENDIF

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    commands    go to state 118
    command     go to state 36
    proc_call   go to state 37
    identifier  go to state 38


State 98

   17 command: IF condition $@6 THEN • commands ENDIF

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    commands    go to state 119
    command     go to state 36
    proc_call   go to state 37
    identifier  go to state 38


State 99

   55 condition: value "=" value •

    $default  reduce using rule 55 (condition)


State 100

   56 condition: value "!=" value •

    $default  reduce using rule 56 (condition)


State 101

   57 condition: value ">" value •

    $default  reduce using rule 57 (condition)


State 102

   58 condition: value "<" value •

    $default  reduce using rule 58 (condition)


State 103

   59 condition: value ">=" value •

    $default  reduce using rule 59 (condition)


State 104

   60 condition: value "<=" value •

    $default  reduce using rule 60 (condition)


State 105

   20 command: WHILE $@7 condition DO • $@8 commands ENDWHILE

    $default  reduce using rule 19 ($@8)

    $@8  go to state 120


State 106

   22 command: REPEAT $@9 commands UNTIL • condition ";"

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    condition   go to state 121
    value       go to state 53
    identifier  go to state 54


State 107

   25 command: FOR PIDENTIFIER FROM value • TO value DO @10 commands $@11 ENDFOR
   28        | FOR PIDENTIFIER FROM value • DOWNTO value DO @12 commands $@13 ENDFOR

    TO      shift, and go to state 122
    DOWNTO  shift, and go to state 123


State 108

   12 command: identifier ":=" expression ";" •

    $default  reduce using rule 12 (command)


State 109

   50 expression: value "+" • value

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 124
    identifier  go to state 54


State 110

   51 expression: value "-" • value

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 125
    identifier  go to state 54


State 111

   52 expression: value "*" • value

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 126
    identifier  go to state 54


State 112

   53 expression: value "/" • value

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 127
    identifier  go to state 54


State 113

   54 expression: value "%" • value

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 128
    identifier  go to state 54


State 114

   38 declarations: declarations "," PIDENTIFIER "[" NUM • ":" NUM "]"

    ":"  shift, and go to state 129


State 115

   40 declarations: PIDENTIFIER "[" NUM ":" NUM "]" •

    $default  reduce using rule 40 (declarations)


State 116

   36 proc_call: PIDENTIFIER $@15 "(" args ")" •

    $default  reduce using rule 36 (proc_call)


State 117

   47 args: args "," • PIDENTIFIER

    PIDENTIFIER  shift, and go to state 130


State 118

   10 commands: commands • command
   15 command: IF condition $@4 THEN commands • ELSE $@5 commands ENDIF

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    ELSE         shift, and go to state 131
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    command     go to state 61
    proc_call   go to state 37
    identifier  go to state 38


State 119

   10 commands: commands • command
   17 command: IF condition $@6 THEN commands • ENDIF

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    ENDIF        shift, and go to state 132
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    command     go to state 61
    proc_call   go to state 37
    identifier  go to state 38


State 120

   20 command: WHILE $@7 condition DO $@8 • commands ENDWHILE

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    commands    go to state 133
    command     go to state 36
    proc_call   go to state 37
    identifier  go to state 38


State 121

   22 command: REPEAT $@9 commands UNTIL condition • ";"

    ";"  shift, and go to state 134


State 122

   25 command: FOR PIDENTIFIER FROM value TO • value DO @10 commands $@11 ENDFOR

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 135
    identifier  go to state 54


State 123

   28 command: FOR PIDENTIFIER FROM value DOWNTO • value DO @12 commands $@13 ENDFOR

    NUM          shift, and go to state 50
    PIDENTIFIER  shift, and go to state 51

    value       go to state 136
    identifier  go to state 54


State 124

   50 expression: value "+" value •

    $default  reduce using rule 50 (expression)


State 125

   51 expression: value "-" value •

    $default  reduce using rule 51 (expression)


State 126

   52 expression: value "*" value •

    $default  reduce using rule 52 (expression)


State 127

   53 expression: value "/" value •

    $default  reduce using rule 53 (expression)


State 128

   54 expression: value "%" value •

    $default  reduce using rule 54 (expression)


State 129

   38 declarations: declarations "," PIDENTIFIER "[" NUM ":" • NUM "]"

    NUM  shift, and go to state 137


State 130

   47 args: args "," PIDENTIFIER •

    $default  reduce using rule 47 (args)


State 131

   15 command: IF condition $@4 THEN commands ELSE • $@5 commands ENDIF

    $default  reduce using rule 14 ($@5)

    $@5  go to state 138


State 132

   17 command: IF condition $@6 THEN commands ENDIF •

    $default  reduce using rule 17 (command)


State 133

   10 commands: commands • command
   20 command: WHILE $@7 condition DO $@8 commands • ENDWHILE

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    ENDWHILE     shift, and go to state 139
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    command     go to state 61
    proc_call   go to state 37
    identifier  go to state 38


State 134

   22 command: REPEAT $@9 commands UNTIL condition ";" •

    $default  reduce using rule 22 (command)


State 135

   25 command: FOR PIDENTIFIER FROM value TO value • DO @10 commands $@11 ENDFOR

    DO  shift, and go to state 140


State 136

   28 command: FOR PIDENTIFIER FROM value DOWNTO value • DO @12 commands $@13 ENDFOR

    DO  shift, and go to state 141


State 137

   38 declarations: declarations "," PIDENTIFIER "[" NUM ":" NUM • "]"

    "]"  shift, and go to state 142


State 138

   15 command: IF condition $@4 THEN commands ELSE $@5 • commands ENDIF

    error        shift, and go to state 27
    PIDENTIFIER  shift, and go to state 28
    IF           shift, and go to state 29
    WHILE        shift, and go to state 30
    REPEAT       shift, and go to state 31
    FOR          shift, and go to state 32
    READ         shift, and go to state 33
    WRITE        shift, and go to state 34

    commands    go to state 143
    command     go to state 36
    proc_call   go to state 37
    identifier  go to state 38


State 139

   20 command: WHILE $@7 condition DO $@8 commands ENDWHILE •

    $default  reduce using rule 20 (command)


State 140

   25 command: FOR PIDENTIFIER FROM value TO value DO • @10 commands $@11 ENDFOR

    $default  reduce using rule 23 (@10)

    @10  go to state 144


State 141
